<resources>
    <!--string for homeactivity-->
    <string name="app_name">KAAK</string>
    <string name="google_maps_key">AIzaSyAwmJqaQKa746Lg-sLzOQqwglfcYqko-VA</string>
    <string name="list_restaurant_tabspec_1">Nhậu</string>
    <string name="list_restaurant_tabspec_2">Cà phê</string>
    <string name="list_restaurant_tabspec_3">Ăn vặt</string>
    <string name="list_restaurant_tabspec_4">Món nướng</string>
    <string name="list_restaurant_tabspec_5">Sinh tố</string>
    <string name="map_searchview_hint">Tìm địa điểm, dịch vụ</string>
    <string name="all_positon">Địa điểm</string>
    <string name="map_search_radius">50m</string>
    <string name="all_find">Tìm</string>
    <string name="all_scan">Scan</string>
    <string name="all_friends">Bạn</string>
    <string name="map_more_button">...</string>

    <!-- string for activity login-->
    <string name="login_title">Đăng nhập hoặc số điện thoại</string>
    <string name="all_email_or_mobile_phone">Địa chỉ Email/số điện thoại</string>
    <string name="all_password">Mật khẩu</string>
    <string name="login_fogot_password"><u>Quên mật khẩu?</u></string>
    <string name="login_button_access">Đăng nhập</string>
    <string name="login_title_login_with_another_account">Hoặc đăng nhập từ tài khoản</string>
    <string name="all_mobile_phone">Số điện thoại</string>
    <string name="all_facebook">Facebook</string>
    <string name="all_google">Google</string>
    <string name="all_register"><u>Đăng ký</u></string>

    <!--string for register-->
    <string name="register_confirm_password">Nhập lại mật khẩu</string>
    <string name="all_cancel">Hủy bỏ</string>


    <!--string for dialog spent money-->
    <string name="all_content">Nội dung</string>
    <string name="all_money">Số tiền</string>
    <string name="all_accept">Chấp nhận</string>
    <string name="get_money">Thu tiền</string>
    <string name="spent_money">Chi tiền</string>

    <!--string for friends fragment-->
    <string name="all_list_friends">Danh sách bạn</string>
    <string name="all_group">Nhóm</string>
</resources>
