<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/login_padding_root"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTypeUserName"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/login_text_size"
            android:layout_marginTop="@dimen/login_margin_top_bottom_long"
            android:text="@string/all_email_or_mobile_phone" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_below="@+id/tvTypeUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="@dimen/login_input_text_padding"
            android:inputType="textPersonName"
            android:layout_marginTop="@dimen/login_margin_top_bottom_short"
            android:background="@drawable/custom_background_button_2_gradius"
            />

        <TextView
            android:id="@+id/tvTypePassWord"
            android:layout_below="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/login_text_size"
            android:layout_marginTop="@dimen/login_margin_top_bottom_long"
            android:text="@string/all_password" />

        <EditText
            android:id="@+id/etPassWord"
            android:layout_below="@+id/tvTypePassWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@drawable/custom_background_button_2_gradius"
            android:padding="@dimen/login_input_text_padding"
            android:paddingRight="@dimen/login_image_show_password_width"
            android:paddingEnd="@dimen/login_image_show_password_width"
            android:layout_marginTop="@dimen/login_margin_top_bottom_short"
            android:inputType="textPassword" />

        <ImageButton
            android:id="@+id/ibtnShowPassword"
            android:layout_width="@dimen/login_image_show_password_width"
            android:background="#fff"
            android:layout_height="@dimen/login_image_show_password_height"
            android:layout_alignRight="@+id/etPassWord"
            android:layout_alignBottom="@+id/etPassWord"
            android:layout_alignTop="@+id/etPassWord"
            android:layout_marginBottom="@dimen/login_input_text_padding"
            android:layout_marginTop="@dimen/login_input_text_padding"
            android:scaleX="0.75"
            android:scaleY="0.75"

            app:srcCompat="@mipmap/ic_eye" />

        <TextView
            android:id="@+id/tvConfirmPassword"
            android:layout_below="@+id/etPassWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/login_text_size"
            android:layout_marginTop="@dimen/login_margin_top_bottom_long"
            android:text="@string/register_confirm_password" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_below="@+id/tvConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@drawable/custom_background_button_2_gradius"
            android:padding="@dimen/login_input_text_padding"
            android:paddingRight="@dimen/login_image_show_password_width"
            android:paddingEnd="@dimen/login_image_show_password_width"
            android:layout_marginTop="@dimen/login_margin_top_bottom_short"
            android:inputType="textPassword" />

        <ImageButton
            android:id="@+id/ibtnShowConfirmPassword"
            android:layout_width="@dimen/login_image_show_password_width"
            android:layout_height="@dimen/login_image_show_password_height"
            android:background="#fff"
            android:layout_alignRight="@+id/etConfirmPassword"
            android:layout_alignBottom="@+id/etConfirmPassword"
            android:layout_alignTop="@+id/etConfirmPassword"
            android:layout_marginBottom="@dimen/login_input_text_padding"
            android:layout_marginTop="@dimen/login_input_text_padding"
            android:scaleX="0.75"
            android:scaleY="0.75"
            app:srcCompat="@mipmap/ic_eye" />

        <LinearLayout
            android:layout_marginTop="@dimen/login_margin_top_bottom_long"
            android:layout_below="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/login_padding_button_login"
                android:layout_marginRight="@dimen/login_margin_between_button"
                android:text="@string/all_register" />
            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/login_padding_button_login"
                android:text="@string/all_cancel" />

        </LinearLayout>

    </RelativeLayout>



</RelativeLayout>
